--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ export default class InvestmentAccountFee {
     if (!fees || !Array.isArray(fees) || fees.length === 0) {
       throw new Error('Fees is empty or undefined');
     }
-    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
+
+    // Localiza o feeType "Investment Account Fees"
+    this.#investiment = fees.find((x) => x.feeType === this.#feeName);
     if (
       !this.#investiment ||
       !Array.isArray(this.#investiment.feeGroups) ||
@@ -21,24 +23,30 @@ export default class InvestmentAccountFee {
       return;
     }
 
+    // Filtra as contas (accounts) que têm feeType=3 (Investment)
     this.#accounts = accounts.filter((x) => x.feeType === 3);
     if (this.#accounts.length < 1) {
       this.#investiment = {};
       return;
     }
 
+    // Monta a lista de codes que iremos tratar: 5, 7, 6 
+    // (pois code=9 já foi unificado em 7 no UseCase)
     this.#accounts.forEach((acc) => {
       if (acc.ddaNumber) {
+        // BPS003 => code=5
         this.#accountsDDA.push({
           number: acc.ddaNumber,
           code: 5,
           entity: acc.entity || null,
         });
+        // BPS004/BPS005 => code=7 (unificado)
         this.#accountsDDA.push({
           number: acc.ddaNumber,
           code: 7,
           entity: acc.entity || null,
         });
+        // BPS002 => code=6
         this.#accountsDDA.push({
           number: acc.ddaNumber,
           code: 6,
@@ -47,11 +55,16 @@ export default class InvestmentAccountFee {
       }
     });
 
+    // Remove duplicados
     this.#accountsDDA = Array.from(
-      new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
+      new Map(
+        this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])
+      ).values()
     );
 
+    // Monta feeGroups para cada conta
     this.#addMultiplesAccount(this.#accounts[0].cifno);
+    // Formata valores
     this.#addCurrentClientValue(equityField);
   }
 
@@ -72,10 +85,15 @@ export default class InvestmentAccountFee {
     return Array.from(map.values());
   }
 
+  /**
+   * Gera feeGroups (Standard Fees, Client Current Fees, etc.)
+   * para cada conta e code no #accountsDDA
+   */
   #addMultiplesAccount(cif) {
     const result = {};
 
     for (const feeGroup of this.#investiment.feeGroups) {
+      // Clona fields para evitar referências compartilhadas
       const clonedFields = (feeGroup.fields || []).map((field) => ({
         ...field,
         exceptionOptions: field.exceptionOptions
@@ -83,11 +101,15 @@ export default class InvestmentAccountFee {
           : []
       }));
 
+      // Para cada code presente em #accountsDDA
       for (const account of this.#accountsDDA) {
         if (!result[account.number]) {
           result[account.number] = {};
         }
+        // Filtra os fields do feeGroup que correspondem a esse code
         let fieldsForAccount = clonedFields.filter((x) => x.code === account.code);
+
+        // Se não houver fields, cria placeholder
         if (fieldsForAccount.length === 0) {
           fieldsForAccount.push({
             code: account.code,
@@ -98,6 +120,7 @@ export default class InvestmentAccountFee {
             exceptionOptions: []
           });
         }
+
         if (!result[account.number][feeGroup.name]) {
           const dedupedFields = this.#deduplicateFields(fieldsForAccount);
           const newFeeGroup = new FeeGroup({
@@ -120,6 +143,7 @@ export default class InvestmentAccountFee {
       }
     }
 
+    // Converte "result" => array
     const feeGroupsArray = [];
     for (const accountNumber in result) {
       for (const groupName in result[accountNumber]) {
@@ -129,18 +153,23 @@ export default class InvestmentAccountFee {
     this.#investiment.feeGroups = feeGroupsArray;
   }
 
+  /**
+   * Formata os valores de cada campo (field):
+   * - se code=7 => exibe textual (já unificado: "Equity: ... ; Option: ...")
+   * - se code=5 => formata numeric com "$"
+   * - se code=6 em "Standard Fees" => exibe textual
+   * - etc.
+   */
   #addCurrentClientValue(equityField) {
     for (const feeGroup of this.#investiment.feeGroups) {
       feeGroup.cif = this.#accounts[0]?.cifno || null;
-  
+
       for (const field of feeGroup.fields) {
         if (field.isException) {
-          // Continua a mesma regra de exceção
+          // Campo de exceção => labelValue vazio ou original
           field.labelValue = field.labelValue || '';
         } else {
-          // 1) Se estivermos no grupo “Client Current Fees”, 
-          // e o code for 6,7,9, etc. (caso exista), 
-          // use a regra que você já tem para trocar defaultValue p/ tooltip se vazio
+          // Se "Client Current Fees" e code=6 ou 7, e defaultValue está vazio, usar tooltip
           if (
             feeGroup.name === "Client Current Fees" &&
             (field.code === 7 || field.code === 6) &&
@@ -149,25 +178,27 @@ export default class InvestmentAccountFee {
             field.defaultValue = field.tooltip || '';
             field.labelValue = field.defaultValue;
           } else {
-            // 2) Se for code=7 => pular parseFloat e exibir o valor textual
+            // Se code=7 => assumimos que defaultValue = "Equity: ... ; Option: ..."
             if (field.code === 7) {
-              // Mantenha a string "Equity: ... ; Option: ..."
               field.labelValue = field.defaultValue;
-            } 
-            // 3) Se for code=5 => formata com "$" e duas casas
+            }
+            // Se code=5 => parse numeric e formata "$"
             else if (field.code === 5) {
               const numValue = parseFloat(field.defaultValue);
-              field.labelValue = !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
-            } 
-            // 4) Se for Standard Fees com code=6 => exibe textual
+              field.labelValue = !isNaN(numValue)
+                ? "$" + numValue.toFixed(2)
+                : field.defaultValue;
+            }
+            // Se "Standard Fees" e code=6 => textual
             else if (feeGroup.name === "Standard Fees" && field.code === 6) {
               field.labelValue = field.defaultValue;
-            } 
-            // 5) Caso contrário => parse numérico normal
+            }
+            // Caso contrário => parse numeric normal
             else {
               const numValue = parseFloat(field.defaultValue);
-              field.labelValue =
-                !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
+              field.labelValue = !isNaN(numValue)
+                ? "$" + numValue.toFixed(2)
+                : field.defaultValue;
             }
           }
         }
@@ -175,7 +206,7 @@ export default class InvestmentAccountFee {
     }
     this.#clearMemory();
   }
-  
+
   #clearMemory() {
     this.#accounts = [];
     this.#accountsDDA = [];
